# sway-input-config

./: .gitignore  README.md  install.sh  io.github.Sunderland93.sway-input-config.appdata.xml  io.github.Sunderland93.sway-input-config.metainfo.xml  io.github.Sunderland93.sway-input-config.xml  locale-gen.sh  pyproject.toml  setup.py  sway-input-config.desktop  uninstall.sh
.github/workflows/: translation_compilation.yml  translation_update.yml
debian/: changelog  control  copyright  files
debian/source/: include-binaries
sway_input_config/: backends.py  dialogs.py  main.py  mainwindow.ui  ui_about.py  ui_error_message.py  ui_mainwindow.py  ui_selectlayout.py  utils.py
sway_input_config/data/: defaults.json  kbd_model.json  layouts.json  shortcuts.json  variants.json
sway_input_config/devices/: keyboard.py  pointer.py  tablet.py  touchpad.py
sway_input_config/langs/: lang_be_BY.qm  lang_be_BY.ts  lang_ru_RU.qm  lang_ru_RU.ts  lang_uk_UA.qm  lang_uk_UA.ts
sway_input_config/ui/: about.ui  error_message.ui  mainwindow.ui  selectlayout.ui
